--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "dianeoyen/dianeoyen.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "oyen.png"
   name             : "Diane Oyen"
   pronouns         : # example: "she/her"  
   bio              : "AI Team Leader and Scientist"
